--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.cdnfonts.com/css/futura-pt');
+body{
+  font-family: 'Futura PT', sans-serif !important;
+}
+
 
 /*Splash Screen*/
 .intro{
