Se cambia segundo video

--- a/css/style.css
+++ b/css/style.css
@@ -57,5 +57,17 @@ body{
   margin-left: 50% !important;
 }
 
+.img{
+  height: 700px !important;
+}
 
+.img-carousel{
+  height: 450px;
+  width: 100%;
+}
+
+#carouselExampleCaptions2
+{
+  margin: 30px;
+}
 
