--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,23 @@ body{
   font-family: 'Futura PT', sans-serif !important;
 }
 
+/* Scroll-bar */
+::-webkit-scrollbar{
+  width:1em;
+  background:grey;
+}
+
+::-webkit-scrollbar-track{
+  background: #b2b4b5;
+  border-radius:3em;
+}
+::-webkit-scrollbar-thumb{
+  background-size: contain; 
+  background-repeat:no-repeat;
+  background: #7b7c7d;
+  border-radius:2em;
+}
+
 
 /*Splash Screen*/
 .intro{
